<resources>
    <string name="action_settings">Settings</string>
    <string name="action_register_with_hub">Register with Hub</string>
    <string name="action_unlocks">Unlocks</string>
    <string name="cap_manual">MANUAL</string>
    <string name="cap_bulbs">BULBS</string>
    <string name="cap_hue_sat_mode">HUE</string>
    <string name="cap_color_temp_mode">TEMPERATURE</string>
    <string name="groups">Groups</string>
    <string name="moods">Moods</string>
    <string name="mood_intro">Mood:</string>
    <string name="group_intro">Group:</string>
    <string name="accept">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="register_success">Link successful</string>
    <string name="register_fail">Could not connect to bridge. Please make sure this device is connected to the same wifi as the hub and has internet access, then try again.</string>
    <string name="link_prompt">Press the link button on your hub</string>
    <string name="advanced">Advanced</string>
    <string name="auto_discover">Auto-Connect</string>
    <string name="contextmenu_delete">Delete</string>
    <string name="contextmenu_edit">Edit</string>
    <string name="contextmenu_rename">Rename</string>
    <string name="actionmenu_new">New</string>
    <string name="actionmenu_new_group">New Group</string>
    <string name="actionmenu_new_mood">New Mood</string>
    <string name="actionmenu_new_color">New State</string>
    <string name="actionmenu_new_alarm">New Alarm</string>
    <string name="hint_mood_name">mood name</string>
    <string name="hint_group_name">group name</string>
    <string name="hint_bulb_name">bulb name</string>
    <string name="brightness">Brightness</string>
    <string name="temperature">Color Temperature (K)</string>
    <string name="toggleColorLoop">Loop Colors :</string>
    <string name="promp_first_view_setting">Default home screen</string>
    <string name="promp_second_view_setting">Default second screen</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="unlock_pro_prompt">Unlock Pro Version!</string>
    <string name="unlock_pro_already">You already have the Pro Version!</string>
    <string name="unlock_pro_descriptor">Pro version enables Alarms, Tasker, Locale and NFC features.</string>
    <string name="nfc_tag_detected">Tag Detected</string>
    <string name="nfc_tag_not_detected">Tag Not Found</string>
    <string name="nfc_tag_write_prompt">Write to Tag</string>
    <string name="nfc_tag_write_success">Saved to Tag</string>
    <string name="nfc_tag_write_fail">Save to Tag Failed</string>
    <string name="nfc_disabled">NFC is not enabled. Turn it on in your device settings</string>
    <string name="nfc_read_done">Done</string>
    <string name="nfc_tag_read_success">NFC tag read</string>
    <string name="nfc_tag_not_supported">Your phone does not support writing data to this NFC tag!</string>
    <string name="alarms">Alarms</string>
    <string name="transition_intro">Fade In:</string>
    <string name="alarm_repeat">Repeat:</string>
    <string name="cap_short_every_day">EVERY DAY</string>
    <string name="next_scheduled_intro">Next alarm</string>
    <string name="update_welcome_title">New in LampShade 2.7</string>
    <string name="hub_discovery_disclaimer">Searching for the hub. This may take a minute.</string>
    <string name="update_message">Please update HueMore to the newest version.</string>
    <string name="update_opt_out">Disable update reminders</string>
    <string name="update">Update</string>
    <string name="action_hub_status">Hub Status</string>
    <string name="reset_hub_connection">Reset Hub Connection</string>
    <string name="hub_connection">Connected to hub with network address</string>
    <string name="hub_connection_error">Not connected to hub!</string>
    <string name="empty_view_text">No alarms found…</string>
    <string name="cap_all">ALL</string>
    <string name="cap_on">ON</string>
    <string name="cap_off">OFF</string>
    <string name="cap_random">RANDOM</string>
    <string name="broken_mood_link">Oops! This mood link cannot be read</string>
    <string name="action_report_bug">Report a bug</string>
    <string name="update_required">This mood requires an updated version of LampShade</string>
    <string name="corrupted_mood">This mood cannot be read</string>
    <string name="contextmenu_delete_timeslot">Delete timeslot</string>
	<string name="contextmenu_delete_channel">Delete channel</string>
	<string name="grid_col_title_channels">Channels</string>
	<string name="infinite_loop">Loop</string>
	<string name="save">Save</string>
	<string name="cap_sample_state">SAMPLE</string>
	<string name="cap_recent_state">RECENT</string>
	<string name="share">Share</string>
	<string name="seconds">Seconds</string>
	<string name="preview">Preview</string>
	<string name="advanced_timeslot_limit">Sorry, moods are limited to 64 timeslots in this version</string>
	<string name="advanced_channel_limit">Sorry, moods are limited to 64 channels in this version</string>
	<string name="community_facebook">LampShade.io on Facebook</string>
	<string name="community_google_plus">LampShade.io on Google+</string>
	<string name="community_twitter">LampShade.io on Twitter</string>
	<string name="action_communities">Community and Support</string>
	<string name="community_message">Join the LampShade.io online community to share moods and discuss LampShade.io features</string>
	<string name="action_welcome">Welcome</string>
	<string name="welcome_message">Welcome to LampShade.io, a powerful app for controlling the Philips Hue smarthome lighting system</string>
	<string name="welcome_get_started">Connect to my Hue</string>
	<string name="welcome_get_hue">Buy a Philips Hue</string>
	<string name="unnamed_group">Unnamed Group</string>
	<string name="unnamed_mood">Unnamed Mood</string>
	<string name="empty_group_list_text">No groups found…</string>
	<string name="widget_alarms_label">LampShade Alarms</string>
	<string name="widget_groups_label">LampShade Groups</string>
	<string name="include_brightness">Include Brightness</string>
	<string name="enable_port_forwarding">Enable remote access (Beta)</string>
	<string name="port_forwarding_instructions">To control your Hue lights over the internet, configure your wifi router settings to forward a port (default is port 80) to the Hue hub. For help, visit the LampShade.io community on Google+ or Facebook</string>
	<string name="port_forwarding_ip_prompt">Router\'s internet IP address</string>
	<string name="port_forwarding_port">Port:</string>
	<string name="action_play">Preview Mood</string>
	<string name="action_help">Help</string>
	<string name="help_page_title">Help Pages</string>
	<string name="minutes">Minutes</string>
	<string name="daily_mood_start_time">Start Time</string>
	<string name="timed_mood_start_time">Start Time</string>
	<string name="show_NFC_read_page_descriptor">Show Quick Controls page when NFC tags read</string>
	<string name="action_connections">Connections</string>
	<string name="action_bulbs">Bulbs</string>
	<string name="actionmenu_new_connection">Connect to a smart lighting device</string>
	<string name="prompt_new_connection_type">Select device type</string>
	<string name="prompt_local_address">Local address of Hub</string>
	<string name="hint_local_address">IP Address</string>
	<string name="prompt_remote_address">Remote access address (optional)</string>
	<string name="hint_remote_address">IP Address or URL</string>
	<string name="toast_hue_connection_updated">Connection Updated</string>
	<string name="notification_overflow_more">more</string>
	<string name="help_title_gettingstarted">Getting Started</string>
	<string name="help_title_editingmoods">Creating and Editing Moods</string>
	<string name="help_title_alarms">Alarms</string>
	<string name="help_title_nfc">Using with NFC Tags</string>
	<string name="help_title_automationpluggin">Pluggin for Tasker/Locale/Llama</string>
	<string name="help_title_faq">FAQ</string>
	<string name="help_content_gettingstarted">Once you have wirelessly connected to your lights, you can begin controlling them.\n\nFirst, click on a light bulb or bulb group to select it.\n\nNext, you are shown a page of moods you may play on your selected bulb(s). Moods can be simple color paterns or dynamic lighting animations.\n\nDynamic moods will continue playing until stopped. To view ongoing moods, look for the LampShade icon in your device\'s notification bar. To stop a mood, play a simple mood(such as ON or OFF) on the same bulb(s).</string>
	<string name="help_content_editingmoods">Moods contain lighting states such as colors and on/off commands.\n\nWhile a mood is played on a group or bulb, these states take effect.\n\nThe states are set to take effect either immediately, over time relative to when the playing starts, or at specific times of the day while the mood is playing.\n\nChannels (columns of states) allow you to play multiple colors at the same time. Each time a mood is played on a group, the group\'s lights will be assigned equally among the channels, round-robin style.</string>
	<string name="help_content_alarms">(Paid Feature)\nAlarms allow you to schedule moods to play at some time in the future.\n\nAlarms can be set to repeat on specific days each week.\n\nWhen using alarms with moods that change in brightness over time(such as Gentle Sunrise), the alarm brightness bar sets the maximum brightness for that mood.\n\nAlarms are stored on your device, so they only take effect when your device can reach the lights over the network.</string>
	<string name="help_content_nfc">(Paid Feature)\nLampShade supports saving moods to electronic NFC tags.\n\nOnce a mood+group+brightness is saved on the tag, it will play anytime you touch the tag to your Android device (if the device is unlocked).\n\nTo use this feature, your device must support writing to NFC tags, and you need tags your device can write to.</string>
	<string name="help_content_automationpluggin">(Paid Feature)\nThe LampShade automation plugin supports many apps including Tasker, Locale, and Llama. These apps can use the plugin to play moods based on various conditions such as gps location, incoming notifications, and much more.\n\nThe plugin is accessed from within these apps, and provides a page for selecting which mood+group+brightness to trigger.</string>
	<string name="help_content_faq">Q. Why aren\'t my Philips lights changing to bright green?\nA. The Philips Hue regular and downlight models only contain Blue, Red and Yellow LEDs so they cannot display intense greens.\n\nQ. Why aren\'t my Philips lights changing to dark reds or blues?\nA. Your Philips lights might be running outdated software. Use the offcial Philips app to update the firmware on your hub and lightbulbs.\n\nQ. Do LampShade alarms work when I\'m away from home?\nA. LampShade alarms can only take effect when LampShade is connected to your lights. They will only work when away from home if you are using the remote access feature.</string>
	<string-array name="update_features">
        <item>Improved mood editor</item>
        <item>Improved asthetics</item>
        <item>Fixed bug that occasionally prevented alarms from being unscheduled when visually turned off. Please restart your phone for this fix to take effect.</item>
        <item>Fixed bug that occasionally caused other moods to be deleted when creating a new mood</item>
    </string-array>
   	<string-array name="mood_types">
        <item>Simple</item>
        <item>Timed</item>
        <item>Daily</item>
    </string-array>
   	<string-array name="repeat_days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>