<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_nfc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/nfc"/>
    <item
        android:id="@+id/action_alarms"
        android:icon="@drawable/device_access_alarms"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/alarms"/>
    <item
        android:id="@+id/action_add_both"
        android:icon="@drawable/content_new"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/actionmenu_new_mood"/>

</menu>