<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp" 
    android:longClickable="true">

    <TextView
        android:id="@+id/groupTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/groups"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/onButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_off" />

    <Button
        android:id="@+id/offButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_on" />

</LinearLayout>