<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/groupTextView"
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/group_intro" />

                <Spinner
                    android:id="@+id/groupSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />
            </LinearLayout>

		<Button
		    android:id="@+id/previewButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/preview" />

            <TextView
                android:id="@+id/brightnessDescripterTextView"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/brightness" />

            <SeekBar
                android:id="@+id/brightnessBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingBottom="8dp"
                android:progress="127" />
            </LinearLayout>
    </ScrollView>
    
    <include layout="@layout/horizontal_divider_line_blue"/>
	
	<EditText
		    android:id="@+id/moodNameEditText"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/hint_mood_name"
		    android:imeOptions="actionDone"
		    android:inputType="text" >
	</EditText>
	
	<include layout="@layout/horizontal_divider_line_blue"/>
	
    <include layout="@layout/confirmation_bar"/>
</LinearLayout>
